更換到JAVA8版本，使用img2pdf 6.0.0